Bug fixes - break status, starting multiple timers at once, 0 formatting, layout spacing

--- a/projects/pomodoro/pomodoro.css
+++ b/projects/pomodoro/pomodoro.css
@@ -1,7 +1,12 @@
+/* Global */
+a {
+    color:#000;
+}
+
 /* Header */
 .header {
     width: 100%;
-    height: 50px;
+    height: 80px;
     overflow: hidden;
     position: fixed;
     top: 0;
@@ -11,10 +16,11 @@
 }
 .header h1#status {
     display: inline=block;
-    height: 50px;
+    height: 80px;
     text-align:center;
     font-family: 'Lato', sans-serif;
-    font-size: 20px;
+    font-size: 25px;
+    padding-top:5px;
     color: white;
 }
 
@@ -23,37 +29,46 @@
 #timer {
     width: 100%;
     text-align:center;
-    margin-top:160px;
-    margin-bottom:60px;
+    margin-top:130px;
+    margin-bottom:5px;
 }
 
 .time {
-    font-size:130px;
+    font-size:100px;
     font-family: 'Comfortaa', cursive;
 }
 
 .customise {
     text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
+    background:none;
+    border:none;
+}
+
+#control {
+    margin-top:30px;
 }
 
 .buttons {
-    margin-top:20px;
-    margin-left:10px;
-    margin-right:10px;
-    width:50px;
-    height:50px;
-    padding-top:10px;
+    margin-left:20px;
+    margin-right:20px;
+    margin-bottom:20px;
+    width:65px;
+    height:65px;
     text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
+    background:none;
+    border:none;
 }
 
 .buttons:active, .customise:active {
     color:#e75a40;
+    border:none;
 }
 
 
 /* Footer */
 footer {
     text-align:center;
-    margin-top:50px;
+    margin-top:30px;
     font-family: 'Lato', sans-serif;
 }
+
